Ajout de la balle et de la raquette.

--- a/S5_casse_briques.html
+++ b/S5_casse_briques.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 	<head>
 		<meta charset="utf-8" />
 		<title>Casse-Briques</title>
@@ -7,6 +8,7 @@
 	</head>
 	
 	<body>
+
 		<div id="l1">
 			<div class="violet2"></div>
 			<div class="violet4"></div>
@@ -19,6 +21,7 @@
 			<div class="violet2"></div>
 			<div class="violet4"></div>
 		</div>
+
 		<div id="l2">
 			<div class="violet1"></div>
 			<div class="violet3"></div>
@@ -31,6 +34,7 @@
 			<div class="violet1"></div>
 			<div class="violet3"></div>
 		</div>
+
 		<div id="l3">
 			<div class="violet2"></div>
 			<div class="violet4"></div>
@@ -43,6 +47,7 @@
 			<div class="violet2"></div>
 			<div class="violet4"></div>
 		</div>
+
 		<div id="l4">
 			<div class="violet1"></div>
 			<div class="violet3"></div>
@@ -55,5 +60,11 @@
 			<div class="violet1"></div>
 			<div class="violet3"></div>
 		</div>
+
+		<div id="balle"></div>
+
+		<div id="raquette"></div>
+
 	</body>
+
 </html>
