--- a/S5_casse_briques.html
+++ b/S5_casse_briques.html
@@ -9,7 +9,7 @@
 	
 	<body>
 
-		<div id="l1">
+		<div>
 			<div class="violet2"></div>
 			<div class="violet4"></div>
 			<div class="violet1"></div>
@@ -20,9 +20,7 @@
 			<div class="violet3"></div>
 			<div class="violet2"></div>
 			<div class="violet4"></div>
-		</div>
-
-		<div id="l2">
+			
 			<div class="violet1"></div>
 			<div class="violet3"></div>
 			<div class="violet2"></div>
@@ -33,9 +31,7 @@
 			<div class="violet4"></div>
 			<div class="violet1"></div>
 			<div class="violet3"></div>
-		</div>
-
-		<div id="l3">
+	
 			<div class="violet2"></div>
 			<div class="violet4"></div>
 			<div class="violet1"></div>
@@ -46,9 +42,7 @@
 			<div class="violet3"></div>
 			<div class="violet2"></div>
 			<div class="violet4"></div>
-		</div>
-
-		<div id="l4">
+			
 			<div class="violet1"></div>
 			<div class="violet3"></div>
 			<div class="violet2"></div>
@@ -60,7 +54,7 @@
 			<div class="violet1"></div>
 			<div class="violet3"></div>
 		</div>
-
+		
 		<div id="balle"></div>
 
 		<div id="raquette"></div>
